<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".ProfileActivity" >

    <ScrollView
        android:id="@+id/SVUsarAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgProfilePicture"
                android:layout_width="fill_parent"
                android:layout_height="104dp"
                android:src="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/lblProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Name" />

            <EditText
                android:id="@+id/txtProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/lblProfileLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_LastName" />

            <EditText
                android:id="@+id/txtProfileLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/lblProfileAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Age" />

            <EditText
                android:id="@+id/txtProfileAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/lblProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Email" />

            <EditText
                android:id="@+id/txtProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_Update" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
